Fix: Remove pointer from team's name on mobile

--- a/src/components/Team/Team.module.scss
+++ b/src/components/Team/Team.module.scss
@@ -74,7 +74,6 @@
   @include flex-aligned(center, center);
   @include font-sized(l3);
 
-  cursor: pointer;
   flex-direction: column;
   height: 100%;
   transition: background-color $transition-time;
